# bw

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitwise.c  bitwise.h  build.sh  bw.c  configure.ac  error.c  error.h
src/: CMakeLists.txt  Makefile.am  bitwise.c  bitwise.h  bitwise_template.inc  bw.c  config.h.in  error.c  error.h  project.h  utils.c  utils.h
test/: bw-test.c  test.c  test.h  utils-test.c
